# fishybot

./: .env  .gitignore  Cargo.toml  README.md
migrations/2022-06-08-224914_links/: up.sql
migrations/2022-07-01-004217_use_uuid/: down.sql  transfer_data.py  up.sql
src/: database.rs  imageutils.rs  main.rs  models.rs  schema.rs  utils.rs
src/instructions/: l.rs  mod.rs  s.rs
tests/: utils_test.rs
