[package]
name = "fishybot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"], version = "0.11"}
dotenv = "0.15.0"
reqwest = {version = "0.11.10", features = ["json"]}
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0"
diesel = { version = "1.4.8", features = ["sqlite"]}
image = "0.24.2"
imageproc = "0.23.0"
rusttype = "0.9.2"